# onis-viewer-v5

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  COMPILE_AND_RUN.md  DEVELOPMENT.md  ENGLISH_TRANSLATION_COMPLETE.md  README.md  SUMMARY.md  test_script.sh
apps/onis_site_server/: CMakeLists.txt  build.sh
apps/onis_site_server/certificates/: certificate.crt  private.key
apps/onis_site_server/include/: dicom_handler.h  server.h  site_api.hpp
apps/onis_site_server/include/database/: site_database.hpp  site_database_pool.hpp  sql_builder.hpp
apps/onis_site_server/include/database/items/: db_album.hpp  db_compression.hpp  db_dicom_access.hpp  db_dicom_ae.hpp  db_dicom_client.hpp  db_download_image.hpp  db_download_series.hpp  db_group.hpp  db_image.hpp  db_item.hpp  db_location.hpp  db_media.hpp  db_organization.hpp  db_partition.hpp  db_partition_link.hpp  db_patient.hpp  db_permission.hpp  db_preference_item.hpp  db_preference_set.hpp  db_report.hpp  db_report_template.hpp  db_role.hpp  db_routing.hpp  db_series.hpp  db_site.hpp  db_smart_album.hpp  db_source.hpp  db_study.hpp  db_user.hpp  db_volume.hpp
apps/onis_site_server/include/exceptions/: site_server_exceptions.hpp
apps/onis_site_server/include/network/drogon/: drogon_http_controller.hpp  drogon_http_server.hpp
apps/onis_site_server/include/services/config/: config_service.hpp
apps/onis_site_server/include/services/requests/: find_request_data.hpp  request_data.hpp  request_database.hpp  request_entity_access_info.hpp  request_exceptions.hpp  request_service.hpp
apps/onis_site_server/resources/: config.json  database.sql
apps/onis_site_server/src/: include_test.cpp  main.cpp  site_api.cpp
apps/onis_site_server/src/database/: site_database.cpp  site_database_album.cpp  site_database_compression.cpp  site_database_download_image.cpp  site_database_download_series.cpp  site_database_group.cpp  site_database_image.cpp  site_database_media.cpp  site_database_organization.cpp  site_database_partition.cpp  site_database_patient.cpp  site_database_permission.cpp  site_database_pool.cpp  site_database_role.cpp  site_database_series.cpp  site_database_site.cpp  site_database_smart_album.cpp  site_database_study.cpp  site_database_user.cpp  site_database_volume.cpp  sql_builder.cpp
apps/onis_site_server/src/network/drogon/: drogon_http_controller.cpp  drogon_http_server.cpp
apps/onis_site_server/src/services/config/: config_service.cpp
apps/onis_site_server/src/services/requests/: request_data.cpp  request_database.cpp  request_download_images.cpp  request_entity_access_info.cpp  request_find_studies.cpp  request_import_dicom_file.cpp  request_init_series_download.cpp  request_service.cpp  request_service_authenticate.cpp
apps/onis_viewer/macos/Runner/: AppDelegate.swift  CMakeLists.txt  Info.plist  Release.entitlements
apps/onis_viewer/macos/Runner/Configs/: AppInfo.xcconfig
apps/onis_viewer/native/backend/: CMakeLists.txt
apps/onis_viewer/native/backend/include/: onis_backend.h
apps/onis_viewer/native/backend/src/: onis_backend.cpp
libs/dicom/dcmtk-3.6.0/: CMakeLists.txt
libs/dicom/dcmtk-3.6.0/dcmdata/libsrc/: dcbytstr.cpp  dcchrstr.cpp  dccodec.cpp  dcdatset.cpp  dcddirif.cpp  dcdicdir.cpp  dcdicent.cpp  dcdict.cpp  dcdictbi.cpp  dcdictzz.cpp  dcdirrec.cpp  dcelem.cpp  dcerror.cpp  dcfilefo.cpp  dchashdi.cpp  dcistrma.cpp  dcistrmb.cpp  dcistrmf.cpp  dcistrmz.cpp  dcitem.cpp  dclist.cpp  dcmetinf.cpp  dcobject.cpp  dcostrma.cpp  dcostrmb.cpp  dcostrmf.cpp  dcostrmz.cpp  dcpath.cpp  dcpcache.cpp  dcpixel.cpp  dcpixseq.cpp  dcpxitem.cpp  dcrleccd.cpp  dcrlecce.cpp  dcrlecp.cpp  dcrledrg.cpp  dcrleerg.cpp  dcrlerp.cpp  dcsequen.cpp  dcstack.cpp  (+39 more)
libs/dicom/dcmtk-3.6.0/dcmimage/libsrc/: diargimg.cpp  (+20 more)
libs/dicom/iconv/: CMakeLists.txt  config.h  iconv.c  localcharset.c  localcharset.h  relocatable.c  relocatable.h
libs/dicom/iconv/include/: aliases.h  aliases_sysaix.h  aliases_syshpux.h  aliases_sysosf1.h  aliases_syssolaris.h  armscii_8.h  ascii.h  atarist.h  big5.h  big5_2003.h  big5hkscs1999.h  big5hkscs2001.h  big5hkscs2004.h  big5hkscs2008.h  c99.h  canonical.h  canonical_aix.h  canonical_aix_sysaix.h  canonical_dos.h  canonical_extra.h  canonical_local.h  canonical_local_sysaix.h  canonical_local_syshpux.h  canonical_local_sysosf1.h  canonical_local_syssolaris.h  canonical_osf1.h  canonical_osf1_sysosf1.h  canonical_sysaix.h  canonical_syshpux.h  canonical_sysosf1.h  canonical_syssolaris.h  ces_big5.h  ces_gbk.h  cjk_variants.h  cns11643.h  cns11643_1.h  cns11643_15.h  cns11643_2.h  cns11643_3.h  cns11643_4.h  (+171 more)
libs/dicom/ijg8/: CMakeLists.txt  jaricom.c  jcapimin.c  jcapistd.c  jcarith.c  jccoefct.c  jccolor.c  jcdctmgr.c  jcdiffct.c  jchuff.c  jchuff8.h  jcinit.c  jclhuff.c  jclossls.c  jclossy.c  jcmainct.c  jcmarker.c  jcmaster.c  jcodec.c  jcomapi.c  jconfig8.h  jcparam.c  jcphuff.c  jcpred.c  jcprepct.c  jcsample.c  jcscale.c  jcshuff.c  jctrans.c  jdapimin.c  jdapistd.c  jdarith.c  jdatadst.c  jdatasrc.c  jdcoefct.c  jdcolor.c  jdct8.h  jddctmgr.c  jddiffct.c  jdhuff.c  (+36 more)
libs/dicom/onis_j2k_kit/: CMakeLists.txt  buffer_stream.cpp  buffer_stream.h  decoder.cpp  encoder.cpp  precompiled_header.hpp
libs/dicom/onis_j2k_kit/public/: onis_j2k_kit.hpp
libs/onis_kit/: CMakeLists.txt  build.sh
libs/onis_kit/include/: core
libs/onis_kit/include/core/: bitmap.hpp  date_time.hpp  event.hpp  exception.hpp  file.hpp  object.hpp  result.hpp  thread.hpp  types.hpp
libs/onis_kit/include/database/: database_interface.hpp
libs/onis_kit/include/dicom/: dicom.hpp
libs/onis_kit/include/utilities/: date_time.hpp  dicom.hpp  filesystem.hpp  regex.hpp  string.hpp  uuid.hpp
libs/onis_kit/public/core/: object.hpp  result.hpp  types.hpp
libs/onis_kit/src/core/: bitmap.cpp  date_time.cpp  event.cpp  file.cpp  result.cpp  thread.cpp
libs/onis_kit/src/dicom/: dicom.cpp
libs/onis_kit/src/utilities/: date_time.cpp  dicom.cpp  filesystem.cpp  regex.cpp  string.cpp  uuid.cpp
macos/Runner/: CMakeLists.txt
shared/cpp/onis_core/: CMakeLists.txt  onis_core.cpp  onis_core.h
(+1209 files in other folders)
